--- a/homePage.css
+++ b/homePage.css
@@ -2,77 +2,42 @@ body
 {
        background-color: #BEC4C4;
        margin: auto;
+       border: 4px solid; 
 } 
 p.title
 {
-       font-size: 27px;
+       font-size: 45px;
        font-family: courier;
        text-align: center;
 }
-p.tableTitles
+p.tableTitles1
 {
        font-size: 15px;
        font-family: courier;
        text-align: center;
+       color: blue;
 }
-p.italic
+p.tableTitles2
 {
-       font-style: italic;       
-}
-p.upper 
-{ 
-       text-transform: uppercase; 
-} 
-
-#top 
-{
-       background-color: #3366FF;
-       color: #ffffff;
-       padding: 15px;
-}
-#main 
-{
-       padding: 10px;
-       color: black;
-    
-       right: 400px;
-}
-#sidebar
-{
-       color: #000000;
-       border: 1px solid #ffffff;
-       border-radius: 4px;
-       padding: 10px;
-       width: 420px;
-       top: 0;
-       right: 0;
-       position: absolute;
+       font-size: 15px;
        font-family: courier;
-       line-height: 20px;
+       text-align: center;
+       color: green;
 }
-#menubar {
-       width: 200px;
-       float: left
-}
-#menulist {
-       padding: 0;
-       position: relative;
-       overflow: auto;
-}
-
-.menuitem 
+p.tableTitles3
 {
-    width: 165px;
-    float: left;
-    background-color: #555555;
-    color: #ffffff;
-    list-style-type: none;
-    margin: 4px;
-    padding: 2px;
-    text-align: center;
-    cursor: pointer;
+       font-size: 15px;
+       font-family: courier;
+       text-align: center;
+       color: red;
 }
-
+img
+{
+       width: 700px; 
+       height: 600px;
+       text-align: center;
+       display:none;
+}
 a:hover
 {
        text-decoration: none;
@@ -90,4 +55,28 @@ a
        color: #ffffff;
        text-decoration: none;
        font-family: courier;
+}
+span 
+{
+       font-size: 18px;
+       font-family: courier;
+       text-align: center;
+       color: blue;
+}
+button
+{
+       text-align: center;
+       margin: auto;
+}
+button:hover
+{
+       text-decoration: none;
+       background-color: #32a4e7;
+       color: #ffffff;
+       padding: 10px;
+       width: 180px;
+       bottom: 0;
+       top: 0;
+       right: 0;
+       
 }
