--- a/homePage.css
+++ b/homePage.css
@@ -10,6 +10,12 @@ p.title
        font-family: courier;
        text-align: center;
 }
+p.button
+{
+       font-size: 18px;
+       font-family: courier;
+       text-align: center;
+}
 p.tableTitles1
 {
        font-size: 18px;
@@ -66,15 +72,15 @@ span
 button
 {
        text-align: center;
-       margin: auto;
+       margin: center;
 }
 button:hover
 {
        text-decoration: none;
        background-color: #32a4e7;
        color: #ffffff;
-       padding: 10px;
-       width: 180px;
+       padding: 20px;
+       width: 220px;
        bottom: 0;
        top: 0;
        right: 0;
