--- a/survey.css
+++ b/survey.css
@@ -11,6 +11,13 @@ p.title
        text-align: center;
        color: white;
 }
+p.results
+{
+       font-size: 20px;
+       font-family: Times;
+       text-align: center;
+       color: blue;
+}
 p.a
 {
        font-size: 15px;
@@ -41,11 +48,11 @@ a:hover
        text-decoration: none;
        background-color: #ccccff;
        color: #ccccff;
-       padding: 8px;
+       /*padding: 8px;
        width: 180px;
        bottom: 0;
        top: 0;
-       right: 0;
+       right: 0;*/
        
 }
 a 
