more changes to php file

--- a/survey.css
+++ b/survey.css
@@ -1,6 +1,6 @@
 body 
 {
-       background-color: #b3d8ff;
+       background-color: #007e80;
        margin: auto;
        border: 4px solid; 
 } 
