still trying to get to display better

--- a/survey.css
+++ b/survey.css
@@ -23,7 +23,7 @@ p.a
        font-size: 22px;
        font-family: Times;
        text-align: center;
-       color: red;
+       color: #000033;
 }
 p.leg
 {
