--- a/survey.css
+++ b/survey.css
@@ -48,11 +48,11 @@ a:hover
        text-decoration: none;
        background-color: #ccccff;
        color: #ccccff;
-       /*padding: 8px;
+       padding: 15px;
        width: 180px;
        bottom: 0;
        top: 0;
-       right: 0;*/
+       right: 0;
        
 }
 a 
@@ -96,7 +96,7 @@ button:hover
        background-color: #32a4e7;
        color: #ffffff;
        padding: 20px;
-       width: 20px;
+       width: 180px;
        bottom: 0;
        top: 0;
        right: 0;
