--- a/survey.css
+++ b/survey.css
@@ -43,23 +43,31 @@ p.button
        font-family: Times;
        text-align: center;
 }
+div
+{
+      background-color: #4d4d4d; 
+      border: 4px solid; 
+      text-align: center; 
+      width: 800px; 
+      margin: auto; 
+}
 a:hover
 {
-       text-decoration: none;
-       background-color: #ccccff;
-       color: #ccccff;
-       padding: 15px;
-       width: 180px;
-       bottom: 0;
-       top: 0;
-       right: 0;
+      text-decoration: none;
+      background-color: #32a4e7;
+      color: #ffffff;
+      padding: 10px;
+      width: 180px;
+      bottom: 0;
+      top: 0;
+      right: 0;
        
 }
 a 
 {
        color: #ffffff;
        text-decoration: none;
-       font-family: Times;
+       font-family: courier;
 }
 span 
 {
