--- a/survey.css
+++ b/survey.css
@@ -23,7 +23,7 @@ p.a
        font-size: 22px;
        font-family: Times;
        text-align: center;
-       color: #000033;
+       color: blue;
 }
 p.leg
 {
@@ -56,11 +56,11 @@ a:hover
       text-decoration: none;
       background-color: #32a4e7;
       color: #ffffff;
-      padding: 10px;
+      /*padding: 10px;
       width: 180px;
       bottom: 0;
       top: 0;
-      right: 0;
+      right: 0;*/
        
 }
 a 
@@ -103,52 +103,11 @@ button:hover
        text-decoration: none;
        background-color: #32a4e7;
        color: #ffffff;
-       padding: 20px;
+       /*padding: 20px;
        width: 180px;
        bottom: 0;
        top: 0;
-       right: 0;
+       right: 0;*/
        
 }
-input[type=radio].css-checkbox 
-{
-       position:absolute; 
-       z-index:-1000; 
-       left:-1000px; 
-       overflow: hidden; 
-       clip: rect(0 0 0 0); 
-       height:1px; 
-       width:1px; 
-       margin:-1px; 
-       padding:0; 
-       border:0;
-}
 
-input[type=radio].css-checkbox + label.css-label 
-{
-      padding-left:36px;
-      height:31px; 
-      display:inline-block;
-      line-height:31px;
-      background-repeat:no-repeat;
-      background-position: 0 0;
-      font-size:31px;
-      vertical-align:middle;
-      cursor:pointer;
-
-}
-
-input[type=radio].css-checkbox:checked + label.css-label
-{
-      background-position: 0 -31px;
-}
-label.css-label 
-{
-      background-image:url(http://csscheckbox.com/checkboxes/u/csscheckbox_8cdd56752b105fd256da5939523edc82.png);
-      -webkit-touch-callout: none;
-      -webkit-user-select: none;
-      -khtml-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-}
